precompiles/utils/macro/tests/precompile/compile-fail/discriminant/missing-param.stderr
error: The discriminant function must only take the code address (H160) as parameter.
  --> tests/precompile/compile-fail/discriminant/missing-param.rs:22:2
   |
22 |     fn discriminant() -> Option<u64> {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
